k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
  namespace: url-shortener
spec:
  selector:
    app: url-shortener
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
